	- "A" releases are "Major Releases" - Big day! Huge rewrites with tons of new features, optimizations
	- "B" releases are "Major Minor Releases" - Cool new features + rewrites, sometimes prone to issues due to new code.
	- "C" releases are "Minor Releases" - Contain bug fixes and improvements to code

********************************************************


Version 2.0.0
	BETA - 11, 12
	- Auto registering page templates
	- Developer Features
	- Security Enhancements
	- SSL PageLines API
	BETA - 9, 10
	- PageLines Extend
	- Usability improvements
	BETA - 8
	- Special Handling
	- Meta Handling
	- Feature Refinements
	- Section Refinements
	BETA - 7
	- Clone Options
	BETA - 6
	- Design Control
	- Color Math
	- Text Shadows
	- Extension Refinements
	BETA - 5
	- Special Page Handling
	- Graphical Selectors
	- Themes Extension
	BETA - 4
	- Section Control Rewrite
		- Fixes issues with hiding same sections
	- Metapanel rewrite
	- Cloning & Meta Options
	BETA - 1, 2, 3
	- Sections Cloning
	- Admin Rewrite
	- Responsive Design
	- Advanced Template Selector
	- Improved Graphics 
	- Updated JS Libs
	- Rewrote Option Engine

Version 1.5.0 -
- Bug Fix - Using categories for feature slider
- API - Use WordPress updates system
- ShareBar - Use PageLines shortener
- Filters - pagelines_before_sharebar
- Filters - pagelines_after_sharebar
- Filters - pagelines_feature_autostop
- Filters - pagelines_branding_rssurl
- Nav - SuperFish fix
- Admin - Custom Post Types meta support added
- I18n - Rebuild translation files
- Sections - Fix twitter url
- Admin - Don't show meta if main blog page

Version 1.4.0 - Refactoring Release
- ShareBar Section - Fixed API Bug
- Feature - Upgraded JS Library
- Sections - Added Tax ID as Class
- Security - Dynamic CSS Handling
- Bug Fix - Cufon Loading
- Speed - Page Load Enhancements
- Theming - Improved CSS file overriding
- Code - Optimized file structure and globals
- API - Check for latest version from PageLines server.