@@ -63,7 +63,8 @@ class PageLinesCSS {
 				
 				if( $o['type'] == 'background_image' && ploption($oid.'_url', $oset)){
 					
-					$bg_repeat = (ploption($oid.'_repeat', $oset)) ? ploption($oid.'_repeat', $oset): 'no-repeat';
+					$bg_repeat = (ploption($oid.'_repeat', $oset)) ? ploption($oid.'_repeat', $oset) : 'no-repeat';
+					$bg_attach = (ploption($oid.'_attach', $oset)) ? ploption($oid.'_attach', $oset): 'scroll';
 					$bg_pos_vert = (ploption($oid.'_pos_vert', $oset) || ploption($oid.'_pos_vert', $oset) == 0 ) ? (int) ploption($oid.'_pos_vert', $oset) : '0';
 					$bg_pos_hor = (ploption($oid.'_pos_hor', $oset) || ploption($oid.'_pos_hor', $oset) == 0 ) ? (int) ploption($oid.'_pos_hor', $oset) : '50';
 					$bg_selector = (ploption($oid.'_selector', $oset)) ? ploption($oid.'_selector', $oset) : $o['selectors'];
@@ -71,15 +72,16 @@ class PageLinesCSS {
 					
 					$css .= sprintf('%s{ background-image:url(%s);}', $bg_selector, $bg_url);
 					$css .= sprintf('%s{ background-repeat: %s;}', $bg_selector, $bg_repeat);
+					$css .= sprintf('%s{ background-attachment: %s;}', $bg_selector, $bg_attach);
 					$css .= sprintf('%s{ background-position: %s%% %s%%;}', $bg_selector, $bg_pos_hor, $bg_pos_vert);
 					
 					
 				}	
 				
-				if($o['type'] == 'colorpicker')
+				elseif( $o['type'] == 'colorpicker')
 					$this->render_css_colors($oid, $o['cssgroup'], $o['css_prop']);
 				
-				elseif($o['type'] == 'color_multi'){
+				elseif( $o['type'] == 'color_multi'){
 					
 					foreach($o['selectvalues'] as $mid => $m){			
 						
