@@ -13,6 +13,10 @@
 
 
 Version 2.0.0
+	BETA - 13
+	- New Fixed Background Option
+	- CPT Handling
+	- Advanced Layout Functions
 	BETA - 11, 12
 	- Auto registering page templates
 	- Developer Features
